--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Issues with digsite content: e.g missing assets, incorrect animations, misnamed tags. 
+description: "Issues with digsite content: e.g missing assets, incorrect animations, misnamed tags."
 labels: ["bug"]
 body:
 - type: markdown
